--- a/index.html
+++ b/index.html
@@ -95,80 +95,80 @@ const questions = [
     // --- 第一關：基礎理解 ---
     {
         level: 1,
-        [cite_start]question: '《夢溪筆談》的作者，被稱為「好奇寶寶」的北宋科學家是誰？ [cite: 5]',
+        question: '《夢溪筆談》的作者，被稱為「好奇寶寶」的北宋科學家是誰？',
         options: ['王安石', '司馬光', '沈括', '蘇軾'],
         answer: '沈括'
     },
     {
         level: 1,
-        [cite_start]question: '在《正午牡丹》的故事中，那朵神奇的牡丹花會在什麼時候開花？ [cite: 5]',
+        question: '在《正午牡丹》的故事中，那朵神奇的牡丹花會在什麼時候開花？',
         options: ['清晨', '正午', '傍晚', '午夜'],
         answer: '正午'
     },
     {
         level: 1,
-        [cite_start]question: '在《磁石指南》故事中，沈括發現磁石總是會指向哪個方向？ [cite: 5]',
+        question: '在《磁石指南》故事中，沈括發現磁石總是會指向哪個方向？',
         options: ['東方', '西方', '北方', '南方'],
         answer: '南方'
     },
     {
         level: 1,
-        [cite_start]question: '沈括給在西北方發現的，像黑色糖漿一樣的液體取了什麼名字？ [cite: 6]',
+        question: '沈括給在西北方發現的，像黑色糖漿一樣的液體取了什麼名字？',
         options: ['黑水', '石脂水', '地油', '石油'],
         answer: '石油'
     },
     {
         level: 1,
-        [cite_start]question: '沈括為了研究牡丹花，像偵探一樣記錄了很多數據，下列何者是故事中提到的？ [cite: 5]',
+        question: '沈括為了研究牡丹花，像偵探一樣記錄了很多數據，下列何者是故事中提到的？',
         options: ['土壤濕度', '花瓣數量', '太陽、溫度、風向', '蜜蜂數量'],
         answer: '太陽、溫度、風向'
     },
     {
         level: 1,
-        [cite_start]question: '沈括利用磁石磨鐵針，是為了製作什麼工具的雛形？ [cite: 6]',
+        question: '沈括利用磁石磨鐵針，是為了製作什麼工具的雛形？',
         options: ['溫度計', '羅盤', '望遠鏡', '地震儀'],
         answer: '羅盤'
     },
     {
         level: 1,
-        [cite_start]question: '村民們一開始稱呼「石油」為什麼？ [cite: 6]',
+        question: '村民們一開始稱呼「石油」為什麼？',
         options: ['龍的口水', '石脂水', '怪怪的黑水', '地底的眼淚'],
         answer: '石脂水'
     },
     {
         level: 1,
-        [cite_start]question: '根據故事，沈括生活的北宋是一個什麼樣的時代？ [cite: 5]',
+        question: '根據故事，沈括生活的北宋是一個什麼樣的時代？',
         options: ['戰爭頻繁的時代', '文學衰敗的時代', '科技發達的時代', '農業落後的時代'],
         answer: '科技發達的時代'
     },
     {
         level: 1,
-        [cite_start]question: '故事中沒有提到沈括在哪個故事中扮演了「花探員」的角色？ [cite: 5]',
+        question: '故事中提到沈括在哪個故事中扮演了「花探員」的角色？',
         options: ['《正午牡丹》', '《磁石指南》', '《石油》', '以上皆非'],
         answer: '《正午牡丹》'
     },
     {
         level: 1,
-        [cite_start]question: '沈括說的「格物致知」，意思比較接近下列何者？ [cite: 7]',
+        question: '沈括說的「格物致知」，意思比較接近下列何者？',
         options: ['把東西的價格弄清楚', '透過觀察事物來學習知識', '把物品放在正確的位置', '用禮物來換取知識'],
         answer: '透過觀察事物來學習知識'
     },
     // --- 第二關：深入分析 ---
     {
         level: 2,
-        [cite_start]question: '沈括最終發現「正午牡丹」開花的主要原因是什麼？ [cite: 5]',
+        question: '沈括最終發現「正午牡丹」開花的主要原因是什麼？',
         options: ['因為正午的陽光最美', '因為正午的風最大', '因為正午的熱度最高', '因為那是一朵有魔法的花'],
         answer: '因為正午的熱度最高'
     },
     {
         level: 2,
-        [cite_start]question: '沈括預見到「磁石指南」最重要的實際用途是什麼？ [cite: 6]',
+        question: '沈括預見到「磁石指南」最重要的實際用途是什麼？',
         options: ['製作好玩的玩具', '幫助水手在海上辨別方向', '用來吸起掉落的鐵釘', '當作鎮紙壓住書本'],
         answer: '幫助水手在海上辨別方向'
     },
     {
         level: 2,
-        [cite_start]question: '沈括為什麼認為「石油」是「寶貝」？ [cite: 6]',
+        question: '沈括為什麼認為「石油」是「寶貝」？',
         options: ['因為它聞起來很香', '因為它可以當作黑色顏料', '因為他發現這是比柴火更好用的燃料', '因為它非常稀有'],
         answer: '因為他發現這是比柴火更好用的燃料'
     },
@@ -186,19 +186,19 @@ const questions = [
     },
     {
         level: 2,
-        [cite_start]question: '故事將沈括的科學探索比喻成「玩解謎遊戲」，這說明了科學探索具有什麼特性？ [cite: 5, 7]',
+        question: '故事將沈括的科學探索比喻成「玩解謎遊戲」，這說明了科學探索具有什麼特性？',
         options: ['非常危險，隨時會失敗', '需要尋找線索，破解秘密，充滿樂趣', '過程枯燥乏味，讓人想睡覺', '只有天才才能玩'],
         answer: '需要尋找線索，破解秘密，充滿樂趣'
     },
     {
         level: 2,
-        [cite_start]question: '沈括預言「石油」未來會是「大資源」，這體現了他什麼樣的能力？ [cite: 6]',
+        question: '沈括預言「石油」未來會是「大資源」，這體現了他什麼樣的能力？',
         options: ['魔法預言的能力', '基於觀察的遠見卓識', '誇大其詞的能力', '賺錢經商的能力'],
         answer: '基於觀察的遠見卓識'
     },
     {
         level: 2,
-        [cite_start]question: '村民對「石油」的反應是「哇哇叫」，而沈括是「這是寶貝！」，這兩者反應的差別在哪裡？ [cite: 6]',
+        question: '村民對「石油」的反應是「哇哇叫」，而沈括是「這是寶貝！」，這兩者反應的差別在哪裡？',
         options: ['膽量大小的差別', '一個害怕未知，一個探索未知', '貧富的差別', '年齡的差別'],
         answer: '一個害怕未知，一個探索未知'
     },
@@ -210,14 +210,14 @@ const questions = [
     },
     {
         level: 2,
-        [cite_start]question: '根據故事，沈括認為獲得知識的「超級武器」或「超級力量」是什麼？ [cite: 7]',
+        question: '根據故事，沈括認為獲得知識的「超級武器」或「超級力量」是什麼？',
         options: ['財富和權力', '記憶力和背誦能力', '觀察力和好奇心', '體力和武力'],
         answer: '觀察力和好奇心'
     },
     // --- 第三關：深層理解與應用 ---
     {
         level: 3,
-        [cite_start]question: '沈括的「格物致知」精神，與現代哪一種思維方式最為接近？ [cite: 7]',
+        question: '沈括的「格物致知」精神，與現代哪一種思維方式最為接近？',
         options: ['藝術創作思維', '神話幻想思維', '科學實證思維', '哲學冥想思維'],
         answer: '科學實證思維'
     },
@@ -255,11 +255,11 @@ const questions = [
         level: 3,
         question: '相較於「正午牡丹只在中午開」這種單純的描述，沈括的研究更進一步的地方在哪裡？',
         options: ['他給牡丹花取了更好聽的名字', '他找到了現象背後的「因果關係」', '他把花移植到了自己的家裡', '他畫了一幅很漂亮的牡丹圖'],
-        answer: '他找到了現象背後的「因果關係」'
+        answer: '他找到了現象背行的「因果關係」'
     },
     {
         level: 3,
-        [cite_start]question: '故事中說「好奇心是超級力量」，這句話如何體現在沈括身上？ [cite: 7]',
+        question: '故事中說「好奇心是超級力量」，這句話如何體現在沈括身上？',
         options: ['他的力氣比所有人都大', '好奇心驅使他去探索別人習以為常或感到害怕的事物', '他能和動植物溝通', '他對所有事情都不滿意'],
         answer: '好奇心驅使他去探索別人習以為常或感到害怕的事物'
     },
@@ -271,7 +271,7 @@ const questions = [
     },
     {
         level: 3,
-        [cite_start]question: '綜合整個故事，沈括留給後人最寶貴的「寶藏」是什麼？ [cite: 8]',
+        question: '綜合整個故事，沈括留給後人最寶貴的「寶藏」是什麼？',
         options: ['他發現的石油和磁石', '他當官的權力', '他寫的詩集', '他那種凡事探究、實事求是的科學精神'],
         answer: '他那種凡事探究、實事求是的科學精神'
     }
